Fix icon blurry + Mise à jour Ruby

--- a/assets/style.sass
+++ b/assets/style.sass
@@ -86,7 +86,7 @@ header
   margin: 0 auto
   font-family: "fanta-icon"
   font-weight: normal
-  font-size: 62px
+  font-size: 60px
   line-height: 130px
   -webkit-touch-callout: none
   -webkit-user-select: none
